--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -207,6 +207,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation project(':react-native-vector-icons')
 }
 
 // Run this once to be able to run the application with BUCK
